# QMpv

./: CMakeLists.txt  README.md  mpvabstractitem.h  mpvcontroller.h  qmldir  qmpv.cpp  qmpv.h  qthelper.hpp
include/: mpvqt_export.h  mpvqt_version.h
